# colorizer

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: base16_builder.rs  colors.rs  conversions.rs  diffs.rs  harmonies.rs  interpolation.rs  lib.rs  main.rs  palette.rs  shades.rs  syntax.rs  tinted_theming.rs  wcag.rs
cli/src/random/: constraints.rs  mod.rs  noise.rs  poisson.rs
docs/: book.toml
docs/src/: SUMMARY.md  concepts.md  overview.md  tinted-theming.md  workflows.md
examples/images/: demo-dark.yml  demo-light.yml
examples/languages/: sample.elm  sample.go  sample.js  sample.py  sample.rs  sample.ts
