[package]
name = "colorizer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
owo-colors = "4.2.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yml = "0.0.12"
toml = "0.9.8"
rand = "0.9"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
